--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "scripts": {
     "dev": "node ace serve --watch",
-    "dev": "node ace serve --watch",
     "debug": "node ace serve --watch --node-args='--inspect'",
     "build": "node ace build --production",
     "start": "node server.js",
@@ -32,9 +31,9 @@
     "@adonisjs/shield": "^7.1.0",
     "@adonisjs/view": "^6.2.0",
     "luxon": "^3.3.0",
-    "mysql2": "^3.2.0",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "sqlite3": "^5.1.6"
   }
 }
