--- a/.env
+++ b/.env
@@ -6,9 +6,9 @@ DRIVE_DISK=local
 SESSION_DRIVER=cookie
 CACHE_VIEWS=false
 
-DB_CONNECTION=mysql
+DB_CONNECTION=sqlite
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
 MYSQL_USER=root
-MYSQL_PASSWORD=root
+MYSQL_PASSWORD=
 MYSQL_DB_NAME=sample_db
